stylesheets/styles.css
.clearfix:after {
  content: "";
  display: table;
  clear: both;
}

.rouge {
  color: #EE3623;
}

.item-padding{
  padding-top: 80px;
}

/*========================================================================================*/
.wrapper-hero-nav{
  width: 100%;
  max-height: 600px;
  background: url("../images/hero_bg@2x.png");
  background-size: 100% auto;
  background-repeat: no-repeat;
}

.hero-nav img.logo{
  display: inline-block;
  position: relative;
  top: 20px;
/*  left: 30px;*/
}

.hero-nav img.laptop{
  position: relative;
  bottom: -40px;
  display: block;
  margin: 0 auto;
}

.hero-nav div.nav-bar{
  display: inline-block;
  float: right;
  position: relative;
  top: 30px;
/*  right: 30px;*/
}

.hero-nav div.nav-bar li{
  font-family: Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 100;
  font-size: 14px;
  list-style: none;
  display: inline;
  padding-left: 15px;
}

.hero-nav div.nav-bar li a {
  text-decoration: none;
  color: white;
  opacity: .8;
}

.hero-nav div.nav-bar li a:hover {
  opacity: 1;
}
/*========================================================================================*/

.call-2-action{
  display: block;
  margin: 0 auto;
  text-align: center;
}

.call-2-action h1{
  font-family: Helvetica Neue, Helvetica, Arial;
  font-weight: 100;
  font-size: 36px;
  color: white;
  margin-bottom: 10px;
}

.call-2-action h3{
  max-width: 450px;
  font-family: Helvetica, Arial;
  font-size: 18px;
  font-weight: 100;
  color: white;
  margin: 0 auto 35px auto;
}

.call-2-action a{
  font-size: 12px;
  text-decoration: none;
  color: white;
  font-family: Helvetica;
  background-color: #FF2828;
  padding: 15px;
  border-radius: 5px;
  opacity: 1;
}

.call-2-action a:hover{
  opacity: .9;
}

/*========================================================================================*/

.customization {
  height: 310px;
  background-color: white;
}

.customization div.content {
  color: #323232;
  padding-top: 10px;
}

.customization div h3 {
  font-size: 25px;
  font-family: 'Helvetica Neue', Helvetica, Arial;
  font-weight: 200;
  margin-bottom: 10px
}

.customization div p{
  font-family: Helvetica, Arial;
  font-size: 14px;
}

.customization div a{
  text-decoration: none;
}

/*========================================================================================*/

.wrapper-layout {
  height: 310px;
  background-color: #EEEEEE;
}

.layout div.content{
  padding-top: 10px;
  color: #323232;
}

.layout div h3 {
  font-size: 25px;
  font-family: 'Helvetica Neue', Helvetica, Arial;
  font-weight: 200;
  margin-bottom: 10px;
}

.layout div p{
  font-family: Helvetica, Arial;
  font-size: 14px;
}

.layout div p span.red-text{
  color: #EE3623;
}


/*========================================================================================*/

.support {
  height: 310px;
  background-color: white;
}

.support div.content{
  padding-top: 10px;
  color: #323232;
}

.support div h3 {
  font-size: 25px;
  font-family: 'Helvetica Neue', Helvetica, Arial;
  font-weight: 200;
  margin-bottom: 10px
}

.support div p{
  font-family: Helvetica, Arial;
  font-size: 14px;
}

.support div p span.red-text{
  color: #EE3623;
}

/*========================================================================================*/
.wrapper-footer {
  background-color: #171717;
  margin: 0;
}

footer p{
  margin: 0;
  padding: 30px;
  font-family: Helvetica, Arial, "Lucida Grande", sans-serif;  font-weight: 100;
  font-size: 14px;
  color: white;
  opacity: 0.6;

}

footer div.footer-links a {
  text-decoration: none;
  color: white;
  opacity: .6;
}

footer div.footer-links li{
  font-family: Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 100;
  font-size: 14px;
  list-style: none;
  display: inline;
  padding-left: 15px;
}

footer p a{
  text-decoration: none;
  color: white;
  opacity: .8;
}

footer p a:hover{
  opacity: 1;
}

footer div.footer-links a:hover {
  opacity: 1;
}

/*========================================================================================*/

@media only screen and (max-width: 1024px){
  .wrapper-hero-nav {
    min-height: 280px;
    background-size:100%;
  }
}

@media only screen and (max-width: 640px){
  .wrapper-hero-nav{
    background-size:120%;
    }
  .item-padding {
    padding: 0;
  }
  /*========================================================================================*/
  .customization {
    height: 350px;
  }

  .customization img{
    padding-top: 20px;
  }

  .customization div h3 {
    margin-top: 0;
    text-align: center;
  }

  .customization div p {
    text-align: center;
  }
  /*========================================================================================*/
  .layout {
    height: 350px;
  }

  .layout img{
    padding-top: 20px;
  }

  .layout div h3 {
    margin-top: 0;
    text-align: center;
  }

  .layout div p {
    text-align: center;
  }

  /*========================================================================================*/
  .support {
    height: 350px;
  }

  .support img{
    padding-top: 20px;
  }

  .support div h3 {
    margin-top: 0;
    text-align: center;
  }

  .support div p {
    text-align: center;
  }
}

/*========================================================================================*/
  @media only screen and (max-width: 400px){
    .wrapper-hero-nav {
      background-size: 135% auto;
    }
  }

